{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 58,
  "lineage": "f3e92ee9-41c7-e490-1eea-3a09094a183a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ansible_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-21T08:45:07.865-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/homework-tf/global/firewalls/ansible-firewall-ssh",
            "log_config": [],
            "name": "ansible-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
            "priority": 1000,
            "project": "homework-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/firewalls/ansible-firewall-ssh",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "master"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_load_balancer_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-21T08:45:07.867-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/homework-tf/global/firewalls/ansible-ingress-lb",
            "log_config": [],
            "name": "ansible-ingress-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
            "priority": 1000,
            "project": "homework-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/firewalls/ansible-ingress-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_traffic_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-09-21T08:45:07.927-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/homework-tf/global/firewalls/ansible-firewall-http",
            "log_config": [],
            "name": "ansible-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
            "priority": 1000,
            "project": "homework-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/firewalls/ansible-firewall-http",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "ansible"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "ansible"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "lb_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/disks/load-balancer-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/homework-tf/zones/us-central1-c/instances/load-balancer-instance",
            "instance_id": "4953732484046274795",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "l_xYWizNSbk=",
            "metadata_startup_script": "apt update \u0026\u0026 apt install nginx -y",
            "name": "load-balancer-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.197.230",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/homework-tf/regions/us-central1/subnetworks/ansible-network",
                "subnetwork_project": "homework-tf"
              }
            ],
            "project": "homework-tf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/instances/load-balancer-instance",
            "tags": [
              "ansible",
              "master"
            ],
            "tags_fingerprint": "kXfXnuMh14o=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/disks/vm1-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/homework-tf/zones/us-central1-c/instances/vm1-instance",
            "instance_id": "5967907123150209259",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "9SKKCiTPQmM=",
            "name": "vm1-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
                "network_ip": "10.128.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/homework-tf/regions/us-central1/subnetworks/ansible-network",
                "subnetwork_project": "homework-tf"
              }
            ],
            "project": "homework-tf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/instances/vm1-instance",
            "tags": [
              "ansible",
              "node"
            ],
            "tags_fingerprint": "1OEr5TDBXHk=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/disks/vm2-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/homework-tf/zones/us-central1-c/instances/vm2-instance",
            "instance_id": "4831328527450390763",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "9SKKCiTPQmM=",
            "name": "vm2-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/homework-tf/regions/us-central1/subnetworks/ansible-network",
                "subnetwork_project": "homework-tf"
              }
            ],
            "project": "homework-tf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/zones/us-central1-c/instances/vm2-instance",
            "tags": [
              "ansible",
              "node"
            ],
            "tags_fingerprint": "1OEr5TDBXHk=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/homework-tf/global/networks/ansible-network",
            "mtu": 0,
            "name": "ansible-network",
            "project": "homework-tf",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homework-tf/global/networks/ansible-network"
          }
        }
      ]
    }
  ]
}